--- a/app/views/school_classes/edit.html.erb
+++ b/app/views/school_classes/edit.html.erb
@@ -1,6 +1,7 @@
 <%= form_for(@school_class) do |s| %>
-  <label>Post title:</label><br>
+  <label>Class title:</label><br>
   <%= s.text_field :title %><br>
+  <label>Class room number:</label><br>
   <%= s.text_field :room_number %><br>
   <%= s.submit %>
 <% end %>
