--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,6 +1,7 @@
 <%= form_for(@student) do |s| %>
-  <label>Post title:</label><br>
+  <label>Student first name:</label><br>
   <%= s.text_field :first_name %><br>
+  <label>Student last name:</label><br>
   <%= s.text_field :last_name %><br>
   <%= s.submit %>
 <% end %>
