--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,3 +1,5 @@
+<h1>Student Form</h1>
+
 <%= form_for(@student) do |s| %>
   <label>Student first name:</label><br>
   <%= s.text_field :first_name %><br>
